--- a/AllianzBackEnd.API/appsettings.Development.json
+++ b/AllianzBackEnd.API/appsettings.Development.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "TestDatabase": "Server=tcp:alatdbtestserver.database.windows.net,1433;Initial Catalog=TestDb;Persist Security Info=False;User ID=AlatUser;Password=Password123$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=300;"
+    "TestDatabase": ""
   },
   "FlutterWaveConfig": {
     "BankTransferUrl": "https://api.flutterwave.com/v3/transfers",
     "MaxRetry": "",
-    "ProviderApiKey": "FLWSECK_TEST-8eb72418aa9de9e05cfca35a533531fc-X"
+    "ProviderApiKey": ""
   },
   "SwaggerFilterUrl": "/"
 }
